# 2025_AUTORACE

./: .gitmodules  README.md  all_hw.launch.py  lidar_rev.py  twist_to_ackermann.py
src/: README.md
src/autorace_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/autorace_bringup/autorace_bringup/: twist_to_ackermann.py
src/autorace_bringup/launch/: bringup.launch.py  sim_bringup.launch.py
src/autorace_bringup/scripts/: mission_fsm.py
src/autorace_detection/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/autorace_detection/autorace_detection/: color_controller.py  lane_controller.py  lane_detectoin.py  red_blue_detector.py  state_machine.py  stopline_controller.py  stopline_detection.py
src/autorace_detection/color_based_drive/: color_based_driving.py  color_detection.py
src/autorace_detection/image_preprocessing/: illumination_preprocessor.py
src/autorace_detection/lane_following/: lane_detector.py  lane_following.py
src/autorace_detection/scripts/: cross_detector.py  lidar_detection.py  stop_line_detector.py
src/autorace_detection/sign_based_drive/: sign_based_driving.py
src/autorace_detection/stopline_detection/: stop_line_detector.py  stop_line_stop.py
src/autorace_sim/: CMakeLists.txt  README.md  package.xml
src/autorace_sim/config/: slam_toolbox.yaml
src/autorace_sim/launch/: spawn_robot.launch.py  world.launch.py
src/autorace_sim/robot_description/: autorace.gazebo  autorace.urdf  sensors_module.xacro
src/autorace_sim/world/: autoracemap.sdf
src/autorace_sim_classic/: CMakeLists.txt  README.md  package.xml
src/autorace_sim_classic/config/: amcl.yaml  slam_toolbox.yaml
src/autorace_sim_classic/demomap/: autorace.pgm  autorace.yaml  demopath.csv
src/autorace_sim_classic/launch/: amcl_bringup.launch.py  slamtoolbox.launch.py  spawn_check.launch.py  spawn_robot.launch.py
src/autorace_sim_classic/robot_description/: autorace.gazebo  autorace.urdf  left_camera.xacro  macros.xacro
src/autorace_sim_classic/scripts/: moving_car.py  moving_cross.py  yolo_dataset_save.py
src/autorace_sim_classic/src/: ackermann_to_cmd_vel.cpp
src/autorace_sim_classic/world/: 2024autorace_basic.sdf  2024autorace_full.sdf  2025autorace_basic.sdf  2025autorace_full.sdf  autorace.sdf
src/f1tenth_stack/config/: joy_teleop.yaml  mux.yaml  vesc.yaml
src/f1tenth_stack/launch/: bringup_launch.py
src/image_preprocessing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/image_preprocessing/config/: camera_config.yaml  tf_config.yaml  (+1 more)
src/image_rectify/: CMakeLists.txt  package.xml
src/localization/: package.xml  setup.cfg  setup.py
src/localization/config/: camera_config.yaml  ekf_odom.yaml  tf_config.yaml  usb_cam_params.yaml
src/localization/launch/: ekf_odom.launch.py  launch.py
src/localization/localization/: bev_node.py  static_tf_node.py
src/object_detector/: CMakeLists.txt  package.xml
src/razor_imu_9dof_ros2/: package.xml  setup.cfg  setup.py
src/razor_imu_9dof_ros2/config/: my_razor.yaml
src/razor_imu_9dof_ros2/launch/: razor.launch.py
src/razor_imu_9dof_ros2/razor_imu_9dof_ros2/: imu_node.py
src/roundabout/: package.xml  setup.cfg  setup.py
src/roundabout/config/: bev_lane_node.yaml  roundabout_node.yaml
src/roundabout/roundabout/: bev_lane_node.py  roundabout_node.py
(+45 files in other folders)
