<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization</name>
  <version>0.0.1</version>
  <description>BEV image generation and static TF broadcaster (rclpy) for autorace localization.</description>

  <maintainer email="gogownsud@gmail.com">jun</maintainer>
  <license>Apache-2.0</license>
  <author email="gogownsud@gmail.com">jun</author>

  <!-- Build system (Python) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (nodes & launch) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- System/Python libs via rosdep -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

