<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>razor_imu_9dof_ros2</name>
  <version>1.3.0</version>
  <description>Razor IMU 9DOF Driver for ROS 2 Humble</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
