<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roundabout</name>
  <version>0.0.0</version>
  <description>Roundabout mission nodes (BEV lane extraction + roundabout FSM)</description>

  <maintainer email="gogownsud@gmail.com">jun</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 툴 (ament_python 빌드 타입에서 사용) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 런타임 의존성 (Python 노드에서 import하는 ROS 패키지들) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- 테스트 의존성 (기본 템플릿 유지) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

